fixtures/errors/const_reassign.expected
exit_code: 1
--- stdout ---
--- stderr ---
Error: error: cannot reassign a const-declared variable `x`
 --> errors/const_reassign.js:2:1
2 | x = 2;
  | ^^^^^

